force-app/main/default/objects/SalesOrder__c/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <description>Account Number = EA Customer Number</description>
    <inlineHelpText>Account Number</inlineHelpText>
    <label>Account No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>