force-app/main/default/objects/SalesOrder__c/fields/Bill_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_Address__c</fullName>
    <description>Billing Street Address</description>
    <inlineHelpText>Billing Street Address</inlineHelpText>
    <label>Bill Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>