force-app/main/default/objects/SalesOrder__c/fields/Bill_Attn__c.field-meta.xml
<CustomField>
    <fullName>Bill_Attn__c</fullName>
    <label>Bill Attn</label>
    <length>80</length>
    <type>Text</type>
</CustomField>