force-app/main/default/objects/SalesOrder__c/fields/Bill_City__c.field-meta.xml
<CustomField>
    <fullName>Bill_City__c</fullName>
    <label>Bill City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>