force-app/main/default/objects/SalesOrder__c/fields/Bill_Country__c.field-meta.xml
<CustomField>
    <fullName>Bill_Country__c</fullName>
    <label>Bill Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>