force-app/main/default/objects/SalesOrder__c/fields/Bill_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_Name__c</fullName>
    <label>Bill Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>