force-app/main/default/objects/SalesOrder__c/fields/Bill_State__c.field-meta.xml
<CustomField>
    <fullName>Bill_State__c</fullName>
    <label>Bill State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>