force-app/main/default/objects/SalesOrder__c/fields/Bill_Zip__c.field-meta.xml
<CustomField>
    <fullName>Bill_Zip__c</fullName>
    <label>Bill Zip</label>
    <length>16</length>
    <type>Text</type>
</CustomField>