force-app/main/default/objects/SalesOrder__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Invoice Date</description>
    <inlineHelpText>Invoice Date</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>