force-app/main/default/objects/SalesOrder__c/fields/EA_Sales_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>EA_Sales_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>EA Sales Order Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>