force-app/main/default/objects/SalesOrder__c/fields/Last_Sync_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Update__c</fullName>
    <label>Last Sync Update</label>
    <type>DateTime</type>
</CustomField>