force-app/main/default/objects/SalesOrder__c/fields/Ship_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_Address__c</fullName>
    <description>Shipping Street Address</description>
    <inlineHelpText>Shipping Street Address</inlineHelpText>
    <label>Ship Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>