force-app/main/default/objects/SalesOrder__c/fields/Ship_Method__c.field-meta.xml
<CustomField>
    <fullName>Ship_Method__c</fullName>
    <label>Ship Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>