force-app/main/default/objects/SalesOrder__c/fields/Ship_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_Name__c</fullName>
    <label>Ship Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>