force-app/main/default/objects/SalesOrder__c/fields/Ship_Zip__c.field-meta.xml
<CustomField>
    <fullName>Ship_Zip__c</fullName>
    <label>Ship Zip</label>
    <length>16</length>
    <type>Text</type>
</CustomField>