force-app/main/default/objects/SalesOrder__c/fields/ShipToAttn__c.field-meta.xml
<CustomField>
    <fullName>ShipToAttn__c</fullName>
    <label>ShipToAttn</label>
    <length>80</length>
    <type>Text</type>
</CustomField>